# datadriven

./: .pre-commit-config.yaml  README.md  noxfile.py  setup.cfg  setup.py
.github/workflows/: ci.yaml
datadriven/: __init__.py
tests/: test_datadriven.py
