[metadata]
name = datadriven
version = 0.1.0
description = Run a test case multiple times with different data
long_description = file: README.md
long_description_content_type = text/markdown
author = Geekie
author_email = eng@geekie.com.br
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
keywords = testing datadriven

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*

[flake8]
max-line-length = 88
ignore = E203, E501, E722, W503, B903, B904, B950
select = B,E,F,W,B9,ISC
